server/deployment/kubernetes/bases/playgame/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playgame-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playgame
  template:
    metadata:
      labels:
        app: playgame
    spec:
      containers:
        - name: playgame-app
          image: asia-east1-docker.pkg.dev/playgame-373510/playgame/server:latest-k8s
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "50m"
              memory: "100Mi"
