server/deployment/kubernetes/bases/playgame/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playgame-service
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: playgame
  type: NodePort
