server/deployment/kubernetes/bases/playgame/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playgame-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: playgame-staging-prod
spec:
  defaultBackend:
    service:
      name: playgame-service
      port:
        number: 8081
